all: initial Panama impl